--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "build": "ESLINT_NO_WARN=true react-scripts build"
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
