--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "build": "ESLINT_NO_WARN=true react-scripts build"
+    "build": "ESLINT_NO_WARN=true react-scripts build",
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
