--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
       "react-app/jest"
     ],
     "rules": {
-    "no-unused-vars": "off" // Disables the no-unused-vars rule
+    "no-unused-vars": "off" 
   }
   },
   "browserslist": {
